--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,34 @@ services:
       - redis
     environment:
       POSTGRES_PASSWORD: sekret
+    networks:
+      canvas_network:
+        ipv4_address: 172.16.1.5
 
   jobs:
     <<: *WEB
     command: bundle exec script/delayed_job run
+    networks:
+      canvas_network:
+        ipv4_address: 172.16.1.4
 
   postgres:
     build: ./docker-compose/postgres
     environment:
       POSTGRES_PASSWORD: sekret
+    networks:
+      canvas_network:
+        ipv4_address: 172.16.1.3
 
   redis:
     image: redis:alpine
+    networks:
+      canvas_network:
+        ipv4_address: 172.16.1.2
+networks:
+  canvas_network:
+    name: canvas_network
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.16.1.0/24
