--- a/docker-compose/mailcatcher.override.yml
+++ b/docker-compose/mailcatcher.override.yml
@@ -11,3 +11,11 @@ services:
     environment:
       VIRTUAL_HOST: mail.canvas.docker
       VIRTUAL_PORT: 8080
+    networks:
+      canvas_network:
+        ipv4_address: 172.16.1.8
+
+networks:
+  canvas_network:
+    external: true
+    name: canvas_network
